# ghast

./: .env  .gitignore  Cargo.toml  bacon.toml  flake.nix
.sqlx/: query-122776fb45b25b3bcd864f4da85faf2df3c8740cf86d51cd279648184c245b19.json  query-1d5a947311ba1d9509ba68f3df78d5cec8465a83d1f7100f40a54baa7aaec876.json  query-3c7d27f479512b632c9268e2bdd316e9599e77cca0e286b4700af98cb931c668.json  query-43059deaf32cc258e85367e8b93084c527241f21e98d07aca54fbec40edc1f4b.json  query-7bd1ec7c546d8dc1ec034dd3045edf52a2f2480a4d14ef8aa1bfa80849235163.json  query-cdd3aa012d950897d593673b40f96a55735ae70bd7dbb14fa1c24c01a68baca2.json  query-da1cbbc42a0f447e0e7a1abf9801d483fe49d8c7fad3b5e40155cd67c7d1d69e.json  query-e3fd2127561f15d0fce8646c8b30c76b4f65c080daf604b617778bad83f98b0e.json
api/: Cargo.toml
api/.sqlx/: query-4f34d41f4886b762e683da4bb90b8fc19ed00eeabc85aaf08137430e145dd544.json  query-55339a2aecffcf6a61f8c277ee43e5445d40dcfb1af95b842ff79fefb8ff35e3.json  query-6236c879af8f7b0e2fbfb4341b95efabdb7d6b1f69500d358c1280d211558ce1.json  query-737f204ff331270dbb25f4a8041115213d899c33bcbb4ccb8fbdf00c07ce37a7.json  query-7e10502d8d98a8c690ce049b566ce3699a6e5b6ff22d964a0d7b2143eaee0c03.json  (+4 more)
api/src/: main.rs
data/: sample.db
fireballs/: .cta.json  components.json  drizzle.config.ts  eslint.config.ts  package.json  prettier.config.mjs  tsconfig.json  vite.config.ts
src/: main.rs
src/db/: database.rs
ui/: .env  .gitignore  app.config.ts  eslint.config.ts  flake.nix  index.html  package.json  playwright.config.ts  prettier.config.mjs  push.sh  tsconfig.json  vite.config.ts
(+150 files in other folders)
